--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <h2><b>MSoledadK</b></h2>
             <h2>Czerwone Proyectos Online</h2>
             <div class="btn-rounded-white">
-                <img src="images/MSoledadK.jpg" />
+                <img src="images/MSoledadK.jpg" weight="200" height="200" />
             </div>
-            <a href="#" class="btn-rounded">Descargar CV</a>
+            <a href="#" class="btn-rounded-white">Descargar CV</a>
         </div>
         <!-- End #lead-content -->
 
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/VetCuki.jpg" />
+                        <img src="images/VetCuki.jpg" weight="200" height="200" />
                     </div>
                    
                     <div class="project-info" >
@@ -165,7 +165,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/MiCV.jpg" />
+                        <img src="images/MiCV.jpg" weight="100" height="200" />
                     </div>
                    
                     <div class="project-info">
