--- a/index.html
+++ b/index.html
@@ -12,10 +12,25 @@
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="index.css" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
+   <style type="text/css">
+    body { font-family: Georgia; color: black; }
+    h3 { font-family: Georgia; color: black; }
+    
+</style>
 </head>
-
+  
 <body>
+
+    <style>
+        div {
+          padding: 3px
+        }
+        div {
+          color: #010103;
+          background-color: #f5d76b
+        }
+      </style>
+
     <div id="mobile-menu-open" class="shadow-large">
         <i class="fa fa-bars" aria-hidden="true"></i>
     </div>
